--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <!-- header -->
     <header>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
@@ -28,11 +28,12 @@
       <!-- logo -->
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
+        <button type="button">Order Service</button>
       </section>
       <!-- meed -->
       <section>
         <ul>
+          <!--  <h2 hidden;>logo2</h2> -->
           <li>
             <h3>Strategy</h3>
             <p>
@@ -68,39 +69,31 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <a href="">
-              <img src="./images/img1.jpg" alt="mark" />
-              <h3>Mark Guerrero</h3>
-              <p>Product Designer</p>
-            </a>
+            <img src="./images/img1.jpg" width="264" alt="mark" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li>
-            <a href="">
-              <img src="./images/img2.jpg" alt="tom" />
-              <h3>Tom Ford</h3>
-              <p>Frontend Developer</p>
-            </a>
+            <img src="./images/img2.jpg" width="264" alt="tom" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <a href="">
-              <img src="./images/img3.jpg" alt="camila" />
-              <h3>Camila Garcia</h3>
-              <p>Marketing</p>
-            </a>
+            <img src="./images/img3.jpg" width="264" alt="camila" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <a href="">
-              <img src="./images/img4.jpg" alt="daniel" />
-              <h3>Daniel Wilson</h3>
-              <p>UI Designer</p>
-            </a>
+            <img src="./images/img4.jpg" width="264" alt="daniel" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- footer -->
     <footer>
-      <h2>WebStudio</h2>
+      <a href="./index.html"><h2>WebStudio</h2></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
