--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- meed -->
       <section>
         <ul>
-          <!-- <h2 hidden;>logo2</h2>  -->
+          <h2 hidden;>logo2</h2>
           <li>
             <h3>Strategy</h3>
             <p>
