--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       </section>
       <!-- meed -->
       <section>
+        <h2>Strategy</h2>
         <ul>
-          <h2>logo2</h2>
           <li>
             <h3>Strategy</h3>
             <p>
