--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </section>
       <!-- meed -->
       <section>
-        <h2>Strategy</h2>
+        <h2 aria-hidden="">Strategy</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
