--- a/index.html
+++ b/index.html
@@ -4,33 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="WebStudio" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <!-- header -->
+    <!-- header ----------------------------->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html"><span class="color-title">Web</span>Studio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li class="heder-activ-studio"><a href="">Studio</a></li>
+          <li class="heder-activ-portfolio"><a href="">Portfolio</a></li>
+          <li class="heder-activ-contact"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="contact-post">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="contact-phone">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
-    <!-- main -->
+    <!-- main ----------------------------->
     <main>
-      <!-- logo -->
-      <section>
+      <!-- logo ------------------------------->
+      <section class="logo-title">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-      <!-- meed -->
+      <!-- meed ------------------------>
       <section>
         <h2 aria-hidden="">Strategy</h2>
         <ul>
@@ -64,8 +74,8 @@
           </li>
         </ul>
       </section>
-      <!-- photo -->
-      <section>
+      <!-- photo ---------------------------------->
+      <section class="team">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -90,10 +100,48 @@
           </li>
         </ul>
       </section>
+      <!-- portfolio  -------------->
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/app1.jpg" width="360" alt="mark" />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/app2.jpg" width="360" alt="tom" />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/app3.jpg" width="360" alt="camila" />
+            <h3>Camila Garcia</h3>
+            <p>App</p>
+          </li>
+
+          <li>
+            <img src="./images/app4.jpg" width="360" alt="mark" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+
+          <li>
+            <img src="./images/app5.jpg" width="360" alt="mark" />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/app6.jpg" width="360" alt="tom" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <!-- footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <!-- footer -------------------------------------->
+    <footer class="logo-title">
+      <a href="./index.html"><span class="color-title">Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
