--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="WebStudio" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
+      rel="stylesheet;"
     />
   </head>
   <body>
     <!-- header ----------------------------->
     <header>
       <nav>
-        <a href="./index.html"><span class="color-title">Web</span>Studio</a>
+        <a href="./index.html"
+          ><span class="color-title">Web</span
+          ><span class="studio1">Studio</span></a
+        >
         <ul>
-          <li class="heder-activ-studio"><a href="">Studio</a></li>
-          <li class="heder-activ-portfolio"><a href="">Portfolio</a></li>
-          <li class="heder-activ-contact"><a href="">Contacts</a></li>
+          <li class="heder-act"><a href="">Studio</a></li>
+          <li class="heder-act"><a href="">Portfolio</a></li>
+          <li class="heder-act"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -37,37 +41,37 @@
     <main>
       <!-- logo ------------------------------->
       <section class="logo-title">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="heder1">Effective Solutions for Your Business</h1>
+        <button type="button" class="button-1">Order Service</button>
       </section>
       <!-- meed ------------------------>
       <section>
-        <h2 aria-hidden="">Strategy</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <h2 aria-hidden="heder2">Features</h2>
+        <ul class="ul-all">
+          <li class="Features-list">
+            <h3 class="header3">Strategy</h3>
+            <p class="p-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="Features-list">
+            <h3 class="header3">Punctuality</h3>
+            <p class="p-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="Features-list">
+            <h3 class="header3">Diligence</h3>
+            <p class="p-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="Features-list">
+            <h3 class="header3">Technologies</h3>
+            <p class="p-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -76,73 +80,76 @@
       </section>
       <!-- photo ---------------------------------->
       <section class="team">
-        <h2>Our Team</h2>
-        <ul>
+        <h2 class="heder2">Our Team</h2>
+        <ul class="ul-all">
           <li>
             <img src="./images/img1.jpg" width="264" alt="mark" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="header3">Mark Guerrero</h3>
+            <p class="p-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/img2.jpg" width="264" alt="tom" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="header3">Tom Ford</h3>
+            <p class="p-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img3.jpg" width="264" alt="camila" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="header3">Camila Garcia</h3>
+            <p class="p-text">Marketing</p>
           </li>
           <li>
             <img src="./images/img4.jpg" width="264" alt="daniel" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="header3">Daniel Wilson</h3>
+            <p class="p-text">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- portfolio  -------------->
       <section>
-        <h2>Our Portfolio</h2>
-        <ul>
+        <h2 class="heder2">Our Portfolio</h2>
+        <ul class="ul-all">
           <li>
             <img src="./images/app1.jpg" width="360" alt="mark" />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="heder3">Banking App</h3>
+            <p class="p-text">App</p>
           </li>
           <li>
             <img src="./images/app2.jpg" width="360" alt="tom" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="heder3">Cashless Payment</h3>
+            <p class="p-text">Marketing</p>
           </li>
           <li>
             <img src="./images/app3.jpg" width="360" alt="camila" />
-            <h3>Camila Garcia</h3>
-            <p>App</p>
+            <h3 class="heder3">Camila Garcia</h3>
+            <p class="p-text">App</p>
           </li>
 
           <li>
             <img src="./images/app4.jpg" width="360" alt="mark" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="heder3">Taxi Service</h3>
+            <p class="p-text">Marketing</p>
           </li>
 
           <li>
             <img src="./images/app5.jpg" width="360" alt="mark" />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="heder3">Screen Illustrations</h3>
+            <p class="p-text">Design</p>
           </li>
           <li>
             <img src="./images/app6.jpg" width="360" alt="tom" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="heder3">Online Courses</h3>
+            <p class="p-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- footer -------------------------------------->
-    <footer class="logo-title">
-      <a href="./index.html"><span class="color-title">Web</span>Studio</a>
-      <p>
+    <footer class="logo-footer">
+      <a href="./index.html"
+        ><span class="color-title">Web</span
+        ><span class="studio2">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
