--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="WebStudio" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet;"
     />
+    <title>WebStudio</title>
   </head>
   <body>
     <!-- header ----------------------------->
@@ -28,10 +28,10 @@
       </nav>
       <address>
         <ul>
-          <li class="contact-post">
+          <li class="contact">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="contact-phone">
+          <li class="contact">
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
