--- a/index.html
+++ b/index.html
@@ -48,36 +48,36 @@
     <main>
       <!-- logo ------------------------------->
       <section class="logo-title">
-        <h1 class="heder1">Effective Solutions for Your Business</h1>
+        <h1 class="list-title2">Effective Solutions for Your Business</h1>
         <button type="button" class="button-1">Order Service</button>
       </section>
       <!-- meed ------------------------>
       <section>
-        <h2 aria-hidden="heder2">Features</h2>
-        <ul class="ul-all">
+        <h2 aria-hidden="list-title1">Features</h2>
+        <ul class="all">
           <li class="Features-list">
-            <h3 class="header3">Strategy</h3>
+            <h3 class="list-title">Strategy</h3>
             <p class="p-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="Features-list">
-            <h3 class="header3">Punctuality</h3>
+            <h3 class="list-title">Punctuality</h3>
             <p class="p-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="Features-list">
-            <h3 class="header3">Diligence</h3>
+            <h3 class="list-title">Diligence</h3>
             <p class="p-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="Features-list">
-            <h3 class="header3">Technologies</h3>
+            <h3 class="list-title">Technologies</h3>
             <p class="p-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -87,64 +87,64 @@
       </section>
       <!-- photo ---------------------------------->
       <section class="team">
-        <h2 class="heder2">Our Team</h2>
-        <ul class="ul-all">
+        <h2 class="list-title1">Our Team</h2>
+        <ul class="all">
           <li>
             <img src="./images/img1.jpg" width="264" alt="mark" />
-            <h3 class="header3">Mark Guerrero</h3>
+            <h3 class="list-title">Mark Guerrero</h3>
             <p class="p-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/img2.jpg" width="264" alt="tom" />
-            <h3 class="header3">Tom Ford</h3>
+            <h3 class="list-title">Tom Ford</h3>
             <p class="p-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img3.jpg" width="264" alt="camila" />
-            <h3 class="header3">Camila Garcia</h3>
+            <h3 class="list-title">Camila Garcia</h3>
             <p class="p-text">Marketing</p>
           </li>
           <li>
             <img src="./images/img4.jpg" width="264" alt="daniel" />
-            <h3 class="header3">Daniel Wilson</h3>
+            <h3 class="list-title">Daniel Wilson</h3>
             <p class="p-text">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- portfolio  -------------->
       <section>
-        <h2 class="heder2">Our Portfolio</h2>
-        <ul class="ul-all">
+        <h2 class="list-title1">Our Portfolio</h2>
+        <ul class="all">
           <li>
             <img src="./images/app1.jpg" width="360" alt="mark" />
-            <h3 class="heder3">Banking App</h3>
+            <h3 class="list-title">Banking App</h3>
             <p class="p-text">App</p>
           </li>
           <li>
             <img src="./images/app2.jpg" width="360" alt="tom" />
-            <h3 class="heder3">Cashless Payment</h3>
+            <h3 class="list-title">Cashless Payment</h3>
             <p class="p-text">Marketing</p>
           </li>
           <li>
             <img src="./images/app3.jpg" width="360" alt="camila" />
-            <h3 class="heder3">Camila Garcia</h3>
+            <h3 class="list-title">Camila Garcia</h3>
             <p class="p-text">App</p>
           </li>
 
           <li>
             <img src="./images/app4.jpg" width="360" alt="mark" />
-            <h3 class="heder3">Taxi Service</h3>
+            <h3 class="list-title">Taxi Service</h3>
             <p class="p-text">Marketing</p>
           </li>
 
           <li>
             <img src="./images/app5.jpg" width="360" alt="mark" />
-            <h3 class="heder3">Screen Illustrations</h3>
+            <h3 class="list-title">Screen Illustrations</h3>
             <p class="p-text">Design</p>
           </li>
           <li>
             <img src="./images/app6.jpg" width="360" alt="tom" />
-            <h3 class="heder3">Online Courses</h3>
+            <h3 class="list-title">Online Courses</h3>
             <p class="p-text">Marketing</p>
           </li>
         </ul>
