--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
       <nav>
         <a href="./index.html"
-          ><span class="color-title">Web</span
+          ><span class="col-title">Web</span
           ><span class="studio1">Studio</span></a
         >
         <ul>
@@ -153,7 +153,7 @@
     <!-- footer -------------------------------------->
     <footer class="logo-footer">
       <a href="./index.html"
-        ><span class="color-title">Web</span
+        ><span class="col-title">Web</span
         ><span class="studio2">Studio</span></a
       >
       <p class="footer-text">
