--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
   <body>
     <!-- header ----------------------------->
     <header>
-      <nav>
-        <a href="./index.html"
-          ><span class="col-title">Web</span
-          ><span class="studio1">Studio</span></a
+      <nav class="navigation">
+        <a href="./index.html" class="web-studio"
+          >Web<span class="studio1">Studio</span></a
         >
         <ul>
           <li class="heder-act"><a href="">Studio</a></li>
@@ -89,22 +88,22 @@
       <section class="team">
         <h2 class="list-title1">Our Team</h2>
         <ul class="all">
-          <li>
+          <li class="photo-team">
             <img src="./images/img1.jpg" width="264" alt="mark" />
             <h3 class="list-title">Mark Guerrero</h3>
             <p class="p-text">Product Designer</p>
           </li>
-          <li>
+          <li class="photo-team">
             <img src="./images/img2.jpg" width="264" alt="tom" />
             <h3 class="list-title">Tom Ford</h3>
             <p class="p-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="photo-team">
             <img src="./images/img3.jpg" width="264" alt="camila" />
             <h3 class="list-title">Camila Garcia</h3>
             <p class="p-text">Marketing</p>
           </li>
-          <li>
+          <li class="photo-team">
             <img src="./images/img4.jpg" width="264" alt="daniel" />
             <h3 class="list-title">Daniel Wilson</h3>
             <p class="p-text">UI Designer</p>
@@ -127,7 +126,7 @@
           </li>
           <li>
             <img src="./images/app3.jpg" width="360" alt="camila" />
-            <h3 class="list-title">Camila Garcia</h3>
+            <h3 class="list-title">Meditation App</h3>
             <p class="p-text">App</p>
           </li>
 
@@ -152,7 +151,7 @@
     </main>
     <!-- footer -------------------------------------->
     <footer class="logo-footer">
-      <a href="./index.html"
+      <a href="/index.html" class="front"
         ><span class="col-title">Web</span
         ><span class="studio2">Studio</span></a
       >
