--- a/index.html
+++ b/index.html
@@ -27,18 +27,20 @@
           >Web<span class="studio1">Studio</span></a
         >
         <ul>
-          <li class="heder-act"><a href="">Studio</a></li>
+          <li class="heder-act"><a href="/index.html">Studio</a></li>
           <li class="heder-act"><a href="">Portfolio</a></li>
           <li class="heder-act"><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="ad-nav">
         <ul>
           <li class="contact">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="contact">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -48,7 +50,7 @@
       <!-- logo ------------------------------->
       <section class="logo-title">
         <h1 class="list-title2">Effective Solutions for Your Business</h1>
-        <button type="button" class="button-1">Order Service</button>
+        <button class="button-1" type="button">Order Service</button>
       </section>
       <!-- meed ------------------------>
       <section>
@@ -114,34 +116,34 @@
       <section>
         <h2 class="list-title1">Our Portfolio</h2>
         <ul class="all">
-          <li>
+          <li class="photo-job">
             <img src="./images/app1.jpg" width="360" alt="mark" />
             <h3 class="list-title">Banking App</h3>
             <p class="p-text">App</p>
           </li>
-          <li>
+          <li class="photo-job">
             <img src="./images/app2.jpg" width="360" alt="tom" />
             <h3 class="list-title">Cashless Payment</h3>
             <p class="p-text">Marketing</p>
           </li>
-          <li>
+          <li class="photo-job">
             <img src="./images/app3.jpg" width="360" alt="camila" />
             <h3 class="list-title">Meditation App</h3>
             <p class="p-text">App</p>
           </li>
 
-          <li>
+          <li class="photo-job">
             <img src="./images/app4.jpg" width="360" alt="mark" />
             <h3 class="list-title">Taxi Service</h3>
             <p class="p-text">Marketing</p>
           </li>
 
-          <li>
+          <li class="photo-job">
             <img src="./images/app5.jpg" width="360" alt="mark" />
             <h3 class="list-title">Screen Illustrations</h3>
             <p class="p-text">Design</p>
           </li>
-          <li>
+          <li class="photo-job">
             <img src="./images/app6.jpg" width="360" alt="tom" />
             <h3 class="list-title">Online Courses</h3>
             <p class="p-text">Marketing</p>
@@ -152,8 +154,7 @@
     <!-- footer -------------------------------------->
     <footer class="logo-footer">
       <a href="/index.html" class="front"
-        ><span class="col-title">Web</span
-        ><span class="studio2">Studio</span></a
+        >Web<span class="studio2">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
