--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <!-- header ----------------------------->
     <header>
       <nav class="navigation">
-        <a href="./index.html" class="web-studio"
-          >Web<span class="studio1">Studio</span></a
+        <a class="web-studio" href="./index.html"
+          >Web<span class="stu">Studio</span></a
         >
-        <ul>
+        <ul class="all">
           <li class="heder-act"><a href="/index.html">Studio</a></li>
           <li class="heder-act"><a href="">Portfolio</a></li>
           <li class="heder-act"><a href="">Contacts</a></li>
@@ -113,7 +113,7 @@
         </ul>
       </section>
       <!-- portfolio  -------------->
-      <section>
+      <section class="job">
         <h2 class="list-title1">Our Portfolio</h2>
         <ul class="all">
           <li class="photo-job">
@@ -153,9 +153,7 @@
     </main>
     <!-- footer -------------------------------------->
     <footer class="logo-footer">
-      <a href="/index.html" class="front"
-        >Web<span class="studio2">Studio</span></a
-      >
+      <a href="/index.html" class="front">Web<span class="stu">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
