--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           >Web<span class="stu">Studio</span></a
         >
         <ul class="all">
-          <li class="heder-act"><a href="/index.html">Studio</a></li>
+          <li class="heder-act-s"><a href="/index.html">Studio</a></li>
           <li class="heder-act"><a href="">Portfolio</a></li>
           <li class="heder-act"><a href="">Contacts</a></li>
         </ul>
@@ -53,7 +53,7 @@
         <button class="button-1" type="button">Order Service</button>
       </section>
       <!-- meed ------------------------>
-      <section>
+      <section class="main-skills">
         <h2 aria-hidden="list-title1">Features</h2>
         <ul class="all">
           <li class="Features-list">
@@ -153,7 +153,9 @@
     </main>
     <!-- footer -------------------------------------->
     <footer class="logo-footer">
-      <a href="/index.html" class="front">Web<span class="stu">Studio</span></a>
+      <a href="/index.html" class="front"
+        >Web<span class="sp-footer">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
