--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- header ----------------------------->
     <header>
       <nav class="navigation">
-        <a class="web-studio" href="./index.html"
+        <a class="web-studio-log" href="./index.html"
           >Web<span class="stu">Studio</span></a
         >
         <ul class="all">
@@ -54,7 +54,7 @@
       </section>
       <!-- meed ------------------------>
       <section class="main-skills">
-        <h2 aria-hidden="list-title1">Features</h2>
+        <h2 class="list-title1">Features</h2>
         <ul class="all">
           <li class="Features-list">
             <h3 class="list-title">Strategy</h3>
