--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
         >
         <ul class="all">
           <li class="heder-act-s"><a href="/index.html">Studio</a></li>
-          <li class="heder-act"><a href="">Portfolio</a></li>
-          <li class="heder-act"><a href="">Contacts</a></li>
+          <li class="heder-act-po"><a href="">Portfolio</a></li>
+          <li class="heder-act-co"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="ad-nav">
         <ul>
-          <li class="contact">
+          <li class="contact-li">
             <a class="contact" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="contact">
+          <li class="contact-li">
             <a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
