--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           >Web<span class="stu">Studio</span></a
         >
         <ul class="all">
-          <li class="heder-act-s"><a href="/index.html">Studio</a></li>
+          <li class="heder-act-s"><a href="./index.html">Studio</a></li>
           <li class="heder-act-po"><a href="">Portfolio</a></li>
           <li class="heder-act-co"><a href="">Contacts</a></li>
         </ul>
@@ -49,12 +49,12 @@
     <main>
       <!-- logo ------------------------------->
       <section class="logo-title">
-        <h1 class="list-title2">Effective Solutions for Your Business</h1>
-        <button class="button-1" type="button">Order Service</button>
+        <h1 class="list-title-b">Effective Solutions for Your Business</h1>
+        <button class="button-a" type="button">Order Service</button>
       </section>
       <!-- meed ------------------------>
       <section class="main-skills">
-        <h2 class="list-title1">Features</h2>
+        <h2 class="list-title-a">Features</h2>
         <ul class="all">
           <li class="Features-list">
             <h3 class="list-title">Strategy</h3>
@@ -114,7 +114,7 @@
       </section>
       <!-- portfolio  -------------->
       <section class="job">
-        <h2 class="list-title1">Our Portfolio</h2>
+        <h2 class="list-title-a">Our Portfolio</h2>
         <ul class="all">
           <li class="photo-job">
             <img src="./images/app1.jpg" width="360" alt="mark" />
