--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </section>
       <!-- meed ------------------------>
       <section class="main-skills">
-        <h2 class="list-title-a">Features</h2>
+        <h2 class="list-title-aq">Features</h2>
         <ul class="all">
           <li class="Features-list">
             <h3 class="list-title">Strategy</h3>
@@ -88,7 +88,7 @@
       </section>
       <!-- photo ---------------------------------->
       <section class="team">
-        <h2 class="list-title1">Our Team</h2>
+        <h2 class="list-title-aq">Our Team</h2>
         <ul class="all">
           <li class="photo-team">
             <img src="./images/img1.jpg" width="264" alt="mark" />
@@ -114,7 +114,7 @@
       </section>
       <!-- portfolio  -------------->
       <section class="job">
-        <h2 class="list-title-a">Our Portfolio</h2>
+        <h2 class="list-title-aq">Our Portfolio</h2>
         <ul class="all">
           <li class="photo-job">
             <img src="./images/app1.jpg" width="360" alt="mark" />
