--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- header ----------------------------->
     <header>
       <nav class="navigation">
-        <a class="web-studio-log" href="./index.html"
+        <a class="weblog" href="./index.html"
           >Web<span class="stu">Studio</span></a
         >
         <ul class="all">
