--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </ul>
       </nav>
       <address class="ad-nav">
-        <ul>
+        <ul class="all">
           <li class="contact-li">
             <a class="contact" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
