--- a/index.html
+++ b/index.html
@@ -24,25 +24,23 @@
     <header>
       <nav class="navigation">
         <a class="weblog" href="./index.html"
-          >Web<span class="stu">Studio</span></a
+          >Web<span class="stusio-sp">Studio</span></a
         >
         <ul class="all">
-          <li class="heder-act-s"><a href="./index.html">Studio</a></li>
-          <li class="heder-act-po"><a href="">Portfolio</a></li>
-          <li class="heder-act-co"><a href="">Contacts</a></li>
+          <li><a class="heder-act-s" href="./index.html">Studio</a></li>
+          <li><a class="heder-act-po" href="">Portfolio</a></li>
+          <li><a class="heder-act-co" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="ad-nav">
         <ul class="all">
           <li class="contact-li">
-            <a class="contact-mails" href="mailto:info@devstudio.com"
+            <a class="contact" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="contact-li">
-            <a class="contact-tel" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
