--- a/index.html
+++ b/index.html
@@ -24,12 +24,18 @@
     <header>
       <nav class="navigation">
         <a class="weblog" href="./index.html"
-          >Web<span class="stusio-sp">Studio</span></a
+          >Web<span class="studio-spa">Studio</span></a
         >
         <ul class="all">
-          <li><a class="heder-act-s" href="./index.html">Studio</a></li>
-          <li><a class="heder-act-po" href="">Portfolio</a></li>
-          <li><a class="heder-act-co" href="">Contacts</a></li>
+          <li class="heder-act-s">
+            <a href="./index.html">Studio</a>
+          </li>
+          <li class="heder-act-po">
+            <a href="">Portfolio</a>
+          </li>
+          <li class="heder-act-co">
+            <a href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address class="ad-nav">
