--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           >Web<span class="studio-spa">Studio</span></a
         >
         <ul class="all">
-          <li class="heder-act-s">
+          <li class="heder-ac">
             <a href="./index.html">Studio</a>
           </li>
-          <li class="heder-act-po">
+          <li class="heder-ac">
             <a href="">Portfolio</a>
           </li>
-          <li class="heder-act-co">
+          <li class="heder-ac">
             <a href="">Contacts</a>
           </li>
         </ul>
