--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           >Web<span class="studio-spa">Studio</span></a
         >
         <ul class="all">
-          <li class="heder-ac">
-            <a href="./index.html">Studio</a>
+          <li class="hed">
+            <a class="hed" href="./index.html">Studio</a>
           </li>
-          <li class="heder-ac">
+          <li class="hed">
             <a href="">Portfolio</a>
           </li>
-          <li class="heder-ac">
+          <li class="hed">
             <a href="">Contacts</a>
           </li>
         </ul>
@@ -46,7 +46,9 @@
             >
           </li>
           <li class="contact-li">
-            <a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contact-tel" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
