--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <a class="hed" href="./index.html">Studio</a>
           </li>
           <li class="hed">
-            <a href="">Portfolio</a>
+            <a class="hed" href="">Portfolio</a>
           </li>
           <li class="hed">
-            <a href="">Contacts</a>
+            <a class="hed" href="">Contacts</a>
           </li>
         </ul>
       </nav>
