--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           >Web<span class="studio-spa">Studio</span></a
         >
         <ul class="all">
-          <li class="hed">
+          <li class="hewn">
             <a class="hed" href="./index.html">Studio</a>
           </li>
-          <li class="hed">
+          <li class="hewn">
             <a class="hed" href="">Portfolio</a>
           </li>
-          <li class="hed">
+          <li class="hewn">
             <a class="hed" href="">Contacts</a>
           </li>
         </ul>
