--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
             >
           </li>
           <li class="contact-li">
-            <a class="contact-tel" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
