--- a/index.html
+++ b/index.html
@@ -21,35 +21,39 @@
   </head>
   <body>
     <!-- header ----------------------------->
-    <header>
-      <nav class="navigation">
-        <a class="weblog" href="./index.html"
-          >Web<span class="studio-spa">Studio</span></a
-        >
-        <ul class="all">
-          <li class="hewn">
-            <a class="hed" href="./index.html">Studio</a>
-          </li>
-          <li class="hewn">
-            <a class="hed" href="">Portfolio</a>
-          </li>
-          <li class="hewn">
-            <a class="hed" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="ad-nav">
-        <ul class="all">
-          <li class="contact-li">
-            <a class="contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contact-li">
-            <a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="header-box">
+        <nav class="navigation">
+          <a class="weblog" href="./index.html"
+            >Web<span class="studio-spa">Studio</span></a
+          >
+          <ul class="all">
+            <li class="hewn">
+              <a class="hed" href="./index.html">Studio</a>
+            </li>
+            <li class="hewn">
+              <a class="hed" href="">Portfolio</a>
+            </li>
+            <li class="hewn">
+              <a class="hed" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="ad-nav">
+          <ul class="all">
+            <li class="contact-li">
+              <a class="contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contact-li">
+              <a class="contact" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- main ----------------------------->
     <main>
